Show interests doorhanger on API access with temporary icons. Wrap the content permission with a promise to delay access to the API until the permission check finishes. Make sure each web api instance is instantiated for each window.

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -649,3 +649,6 @@ just addresses the organization to follow, e.g. "This site is run by " -->
 <!ENTITY mixedContentBlocked.moreinfo "Most websites will still work properly even when this content is blocked.">
 
 <!ENTITY pointerLock.notification.message "Press ESC at any time to show it again.">
+
+<!ENTITY interests.learnMore "Learn More…">
+<!ENTITY interests.privacy "Mozilla protects your privacy.">
