--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -286,6 +286,13 @@ pointerLock.neverAllow.accesskey=N
 pointerLock.title=Would you like to allow the mouse cursor to be hidden on %S?
 pointerLock.autoLock.title=%S will hide the mouse cursor.
 
+# Interests UI
+interests.message=Personalize the Web with your Interests?
+interests.neverForSite=Never for This Site
+interests.neverForSite.accesskey=N
+interests.shareForAll=Personalize All Sites
+interests.shareForAll.accesskey=P
+
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
